# feipi-session-browser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  build.gradle.kts  count_loc.py  count_loc_by_file.py  gradle.lockfile  gradle.properties  lombok.config  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  settings.gradle.kts
.agent/: task-ledger.md
.claude/: change-log.jsonl  settings.json  settings.local.example.json  settings.local.json.example
.claude/agents/: implementer.md  mhtml-export-specialist.md  migration-planner.md  openspec-planner.md  qa-verifier.md  qwen-main-default.md  repo-mapper.md  session-detail-v17-worker.md  session-detail-v18-worker.md  task-slicer.md  ui-architect.md
.claude/commands/: change.md  create-task-pack.md  diagnose-ui-gate.md  execute-task-file.md  fix-session-detail-v17-complete.md  openspec-apply.md  openspec-propose.md  openspec-validate.md  quality-gate.md  refactor_remaining_autopilot.md  ui-v15-upgrade.md
.claude/hooks/: README.md  claude-hook.sh  config-change.sh  post-write.sh  pre-bash.sh  pre-write.sh  pre_tool_guard.sh  session-start.sh  stop.sh  stop_check.sh  subagent-start.sh  subagent-stop.sh  tool-failure.sh
.claude/skills/: feipi-openspec-orchestrate-change
.codex/: config.toml  hooks.json  model-instructions.md
.codex/agents/: implementer.toml  mhtml-export-specialist.toml  migration-planner.toml  openspec-planner.toml  qa-verifier.toml  repo-mapper.toml  task-slicer.toml  ui-architect.toml
.codex/hooks/: post_tool_guard.sh  stop_check.sh
.github/workflows/: ci-distribution.yml  java-quality.yml  quality.yml  release.yml
.qoder/hooks/: stop_check.sh
app-cli/: build.gradle.kts
build-logic/: build.gradle.kts  settings.gradle.kts
compose/: docker-compose.yml
config/: technical-terms.json
config/api-snapshots/: java-public-api.txt
config/checkstyle/: checkstyle.xml  suppressions.xml
config/pmd/: pmd.xml
config/reuse-analysis/: baseline.json  bootstrap-state.json  policy.json
docs/: python-retirement-roadmap.md  session-export-contract.md  token-usage-extraction-standard.md
docs/acceptance/: PAGE_ACCEPTANCE_CHECKLIST.md  README.md  TEST_CONTRACT_ID_RULES.md
docs/acceptance-contracts/: README.md  TEST_CONTRACT_ID_RULES.md  ds-010-distribution-contract.md  qa-010-query-application.md  web-010-http-route-template-asset-security.md
docs/agent-token-attribution/: README.md  claude-code.md  codex.md  qoder.md
docs/governance/: quality-gate-repair.md  tool-usage.md
docs/harness/: README.md  directory-map.md  quality-strategy.md
docs/page-ui-specs/: README.md  common.md  page-acceptance-checklist.md
docs/qa/: session-detail-hifi-checklist.md
docs/release/: release-process.md  signing-strategy.md
docs/releases/: v0.3.0.md
docs/session-samples/: README.md  sample-contract.md
docs/ui/: README.md
e2e/: session-detail-layout.spec.js  session-detail.spec.js  sessions-list.spec.js
env/: .env.example
gradle/: libs.versions.toml  verification-metadata.xml
harness/: README.md  agent-runtime.md  manifest.yaml
harness/context/: README.md  dashboard-v16-tooltip-dots-context.md  dashboard-v16-ui-context.md  data-model-context.md  mhtml-context.md  product-context.md  repo-context.md  repo-map.md  routes.yaml  session-detail-v17-context.md  session-detail-v18-context.md  ui-context-v15.md  ui-context.md
harness/governance/: css-ownership.md  quality-gate-repair.md
openspec/: README.md  active_change.json  config.yaml  project.md
prompts/: README.md
scripts/: check_inspector_viewer_structure.py  check_payload_visibility.py  check_profile_table_structure.py  check_scroll_shadow_behavior.py  check_timeline_expandability.py  check_ui_density_and_font_size.py  generate_fixture_sessions.py  qa_screenshots.py  session-browser.sh  start_fixture_server.py  validate_css_ownership.py
tasks/: README.md
tests/: baseline-failures.txt  conftest.py  test_agent_detail.py  test_agents_list_page.py  test_anomalies.py  test_claude_code_request_reconstruction.py  test_claude_hooks_evidence.py  test_claude_hooks_file_policy.py  test_claude_hooks_stop_policy.py  test_claude_source.py  test_cli.py  test_codex_openai_attribution.py  test_content_part.py  test_dashboard.py  test_dashboard_v16.py  test_glossary_page.py  test_hifi_dom_structure.py  test_inspector_viewer_structure.py  test_list_title_truncation.py  test_llm_attribution_api.py  test_llm_attribution_bucket_normalization.py  test_llm_attribution_call_scoped_correctness.py  test_llm_attribution_claude_code.py  test_llm_attribution_codex.py  test_llm_attribution_context_builder.py  test_llm_attribution_context_hydration.py  test_llm_attribution_contract.py  test_llm_attribution_deep_source_correlation.py  test_llm_attribution_error_isolation.py  test_llm_attribution_error_payload.py  test_llm_attribution_qoder.py  test_llm_attribution_semantic_correctness.py  test_llm_attribution_serializers.py  test_llm_attribution_token_estimator.py  test_llm_attribution_visual_gate.py  test_log_file_change.py  test_long_session_performance.py  test_make_round.py  test_mhtml_export.py  test_payload_modal_renderer_contract.py  (+51 more)
tests/hooks/: README.md  (+7 more)
tmp/: repo-slimming-review.md
(+1574 files in other folders)
